# django-support-emails

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
dj_email_support/: asgi.py  settings.py  urls.py
index/: models.py  serializers.py  urls.py  views.py
index/migrations/: 0001_initial.py
src/: Pipfile
src/dj_email_support/: manage.py  urls.py  wsgi.py
src/drf_support_emails_chilusoft.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/index/: urls.py
