[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drf_support_emails_chilusoft"
version = "0.0.1"
authors = [
  { name="Chilufya Mukuka", email="mukukachilu@gmail.com" },
]
description = "A DRF implementation of Contact Support Emails"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/chilusoft/django-support-emails/"
Issues = "https://github.com/chilusoft/django-support-emails/issues"